# ROS_Project

./: README.rd  README.txt  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
assignment1_package/: CMakeLists.txt  package.xml
assignment1_package/action/: NavigationTask.action
assignment1_package/launch/: assignment_1.launch  start.launch  waypoints_navigation.launch
assignment1_package/src/: move_head_down_node.cpp  node_A.cpp  node_B.cpp  waypoints_navigation_node.cpp
assignment2_package/: CMakeLists.txt
assignment2_package/config/: move_base_params.yaml
assignment2_package/msg/: ObjectPoseArray.msg
assignment2_package/src/: node_A.cpp  node_B.cpp  node_C.cpp  tables_node.cpp
assignment2_package/srv/: GetObjectPose.srv  PickObject.srv  PlaceObject.srv
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/apriltag_finder/: .catkin
devel/.private/apriltag_ros/: .catkin  local_setup.fish  setup.fish
devel/.private/assignment2/: .catkin
devel/.private/assignment2_package/: .catkin  local_setup.sh  setup.fish
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.fish
devel/.private/gazebo_ros_link_attacher/: .catkin  setup.sh
devel/.private/tiago_iaslab_simulation/: .catkin
devel/.private/tiago_movement/: .catkin  .rosinstall  setup.sh
devel/.private/tiago_search_detect/: .catkin  .rosinstall  setup.sh
devel/include/apriltag_finder/: ApriltagsIDsSrv.h  ApriltagsIDsSrvRequest.h  ApriltagsIDsSrvResponse.h
devel/include/apriltag_ros/: AnalyzeSingleImage.h  AnalyzeSingleImageRequest.h  AnalyzeSingleImageResponse.h  AprilTagDetection.h  AprilTagDetectionArray.h
devel/include/assignment2_package/: GetObjectPose.h  GetObjectPoseRequest.h  GetObjectPoseResponse.h  ObjectPose.h  ObjectPoseArray.h  PickObject.h  PickObjectRequest.h  PickObjectResponse.h  PlaceObject.h  PlaceObjectRequest.h  PlaceObjectResponse.h
devel/include/gazebo_ros_link_attacher/: Attach.h  AttachRequest.h  AttachResponse.h
devel/include/tiago_iaslab_simulation/: Coeffs.h  CoeffsRequest.h  CoeffsResponse.h  Objs.h  ObjsRequest.h  ObjsResponse.h
devel/lib/apriltag_finder/: ids_generator_node  node_a  node_b
devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node
devel/lib/assignment2/: collision_objects  table_navigation
devel/lib/assignment2_package/: coordinator_node  detection_collision_node  manipulation_node  move_head_down_node  node_A  node_B  node_C  tables_node  test_node
devel/lib/pkgconfig/: apriltag.pc  (+9 more)
logs/apriltag_finder/: build.check.000.log.stderr  build.check.001.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
logs/assignment2/: build.check.005.log.stderr  build.check.032.log.stderr  build.check.034.log.stderr  build.check.035.log.stderr  build.check.036.log.stderr  build.make.001.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.024.log.stderr  build.make.026.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.031.log.stderr
logs/assignment2_package/: build.check.000.log.stderr  build.check.013.log.stderr  build.check.023.log.stderr  build.check.024.log.stderr  build.cmake.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.035.log.stderr  build.make.044.log.stderr
logs/tiago_iaslab_simulation/: build.make.000.log.stderr
logs/tiago_search_detect/: build.check.000.log.stderr  build.check.001.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.050.log.stderr  build.make.067.log.stderr  build.make.069.log.stderr  build.make.071.log.stderr  build.make.072.log.stderr  build.make.073.log.stderr  build.make.074.log.stderr  build.make.079.log.stderr
src/apriltag_finder/: CMakeLists.txt
src/apriltag_finder/launch/: apriltag_finder.launch  full_system.launch
src/apriltag_finder/src/: ids_generator_node.cpp  node_a.cpp  node_b.cpp
src/apriltag_finder/srv/: ApriltagsIDsSrv.srv
src/assignment2/: CMakeLists.txt
src/assignment2/src/: collision_objects.cpp  table_navigation.cpp
src/assignment2_package/: CMakeLists.txt  package.xml
src/assignment2_package/include/: gripper_control.h
src/assignment2_package/include/assignment2_package/: gripper_control.h
src/assignment2_package/launch/: assignment2.launch  assignment_2.launch  nodes.launch  start.launch  start_with_tables.launch  test_launch.launch  tiago_with_fingertip.launch
src/assignment2_package/src/: coordinator_node.cpp  detection_collision_node.cpp  gripper_control.h  manipulation_node.cpp  move_head_down_node.cpp  node_A.cpp  node_B.cpp  node_C.cpp  primitives.h  tables_node.cpp  test_node.cpp
src/assignment2_package/srv/: GetAllObjectPoses.srv  GetObjectPose.srv  PickObject.srv  PlaceObject.srv
src/assignment2_package/urdf/: fingertip_frame.xacro  tiago_with_fingertip.urdf.xacro
src/assignment2_package/urdf/end_effectors/: custom_end_effector.urdf.xacro
src/tiago_iaslab_simulation/: CMakeLists.txt
src/tiago_movement/: CMakeLists.txt
src/tiago_movement/src/: cmd_vel_subscriber.cpp
src/tiago_search_detect/: CMakeLists.txt  package.xml
src/tiago_search_detect/config/: tiago_waypoints.yaml
src/tiago_search_detect/launch/: test.txt  waypoints_navigation.launch
src/tiago_search_detect/src/: move_head_down_node.cpp  node_a.cpp  node_b.cpp
(+289 files in other folders)
